--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Tangerine&display=swap"
       rel="stylesheet"
     />
-    <title>Timeless Treasure | Vintage Shopping Platform</title>
+    <title>Timeless Treasure Shop</title>
   </head>
   <body>
     <div id="root"></div>
